2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Air_Instruction__c/fields/Airport_of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Airport_of_Discharge__c</fullName>
    <label>Airport of Discharge</label>
    <length>40</length>
    <type>Text</type>
</CustomField>