2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Air_Instruction__c/fields/Booking_Agent__c.field-meta.xml
<CustomField>
    <fullName>Booking_Agent__c</fullName>
    <label>Booking Agent</label>
    <length>40</length>
    <type>Text</type>
</CustomField>