2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Air_Instruction__c/fields/CollectionorDelivery_Date__c.field-meta.xml
<CustomField>
    <fullName>CollectionorDelivery_Date__c</fullName>
    <label>Collection/Delivery Date</label>
    <type>Date</type>
</CustomField>