2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Air_Instruction__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>