2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Air_Instruction__c/fields/Deliver_To__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To__c</fullName>
    <label>Deliver To</label>
    <type>TextArea</type>
</CustomField>