2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Air_Instruction__c/fields/ETD__c.field-meta.xml
<CustomField>
    <fullName>ETD__c</fullName>
    <label>ETD</label>
    <type>Date</type>
</CustomField>