2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Air_Instruction__c/fields/HAWB__c.field-meta.xml
<CustomField>
    <fullName>HAWB__c</fullName>
    <label>HAWB</label>
    <length>40</length>
    <type>Text</type>
</CustomField>