2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Air_Instruction__c/fields/Job_Reference__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Reference</label>
    <referenceTo>Job_Reference__c</referenceTo>
    <relationshipName>Transport_Air_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>