2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Air_Instruction__c/fields/MAWB__c.field-meta.xml
<CustomField>
    <fullName>MAWB__c</fullName>
    <label>MAWB</label>
    <length>40</length>
    <type>Text</type>
</CustomField>