2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Air_Instruction__c/fields/Total_Outer_Pack__c.field-meta.xml
<CustomField>
    <fullName>Total_Outer_Pack__c</fullName>
    <label>Total Outer Pack</label>
    <length>40</length>
    <type>Text</type>
</CustomField>