2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Air_Instruction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collection</fullName>
                <default>true</default>
                <label>Collection</label>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>